external/envoy.yaml
admin:
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      # httpbin
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          scheme_header_transformation:
            scheme_to_overwrite: https
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              # - match:
              #     prefix: "/"
              #   route:
              #     cluster: httpbin
              - match:
                  prefix: "/"
                route:
                  cluster: outbound|443||bigmodel.dns
                  timeout: 300s

          http_filters:
          # ai-cache
          - name: ai-cache
            typed_config:
              "@type": type.googleapis.com/udpa.type.v1.TypedStruct
              type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              value:
                config:
                  name: ai-cache
                  vm_config:
                    runtime: envoy.wasm.runtime.v8
                    code:
                      local:
                        filename: /etc/envoy/ai-cache.wasm
                  configuration:
                    "@type": "type.googleapis.com/google.protobuf.StringValue"
                    value: |
                      {
                        "embedding": {
                          "type": "dashscope",
                          "serviceName": "dashscope",
                          "apiKey": "sk-"
                        },
                        "vector": {
                          "type": "milvus",
                          "serviceName": "milvus",
                          "collectionID": "higress",
                          "servicePort": 19530,
                          "threshold": 0.7,
                          "thresholdRelation": "gte"
                        }
                      }

                      

          # 上面的配置中 redis 的配置名字是 redis，而不是 golang tag 中的 redisConfig
                        # "vector": {
                        #   "type": "qdrant",
                        #   "serviceName": "qdrant",
                        #   "collectionID": "higress",
                        #   "servicePort": 6333
                        # }

                        # "vector": {
                        #   "type": "pinecone",
                        #   "serviceName": "pinecone",
                        #   "collectionID": "higress",
                        #   "serviceDomain": "higress-.svc.aped--.pinecone.io",
                        #   "apiKey": "----"
                        # }

                        # "vector": {
                        #   "type": "elasticsearch",
                        #   "serviceName": "es",
                        #   "collectionID": "higress",
                        #   "esUsername": "elastic",
                        #   "esPassword": "123456",
                        #   "servicePort": 9200
                        # }

                        # "vector": {
                        #   "type": "weaviate",
                        #   "serviceName": "weaviate",
                        #   "collectionID": "Higress",
                        #   "servicePort": 8081
                        # }

                        # "cache": {
                        #   "type": "redis",
                        #   "serviceName": "redis_cluster",
                        #   "timeout": 1000
                        # }

                        # "vector": {
                        #   "type": "chroma",
                        #   "serviceName": "chroma",
                        #   "collectionID": "----",
                        #   "servicePort": 8001
                        # },                        
                        
                        # "vector": {
                        #   "type": "dashvector",
                        #   "serviceName": "dashvector",
                        #   "collectionID": "higress_euclidean",
                        #   "serviceDomain": "vrs-cn-g6z3yq2wy0001z.dashvector.cn-hangzhou.aliyuncs.com",
                        #   "apiKey": "sk-"
                        # },
                        
                        # "vectorProvider": {
                        #   "VectorStoreProviderType": "chroma",
                        #   "ChromaServiceName": "chroma",
                        #   "ChromaCollectionID": "----"
                        # },

                        # "vectorProvider": {
                        #   "VectorStoreProviderType": "elasticsearch",
                        #   "ThresholdRelation": "gte",
                        #   "ESThreshold": 0.7,
                        #   "ESServiceName": "es",
                        #   "ESIndex": "higress",
                        #   "ESUsername": "elastic",
                        #   "ESPassword": "123456"
                        # },

                        # "vectorProvider": {
                        #   "VectorStoreProviderType": "weaviate",
                        #   "WeaviateServiceName": "weaviate",
                        #   "WeaviateCollection": "Higress",
                        #   "WeaviateThreshold": "0.3"
                        # },

                        # "vector": {
                        #   "type": "pinecone",
                        #   "PineconeServiceName": "pinecone",
                        #   "PineconeApiEndpoint": "higress-.svc.aped--.pinecone.io",
                        #   "PineconeThreshold": "0.7",
                        #   "ThresholdRelation": "gte",
                        #   "PineconeApiKey": "key"
                        # },
          # llm-proxy
          - name: llm-proxy
            typed_config:
              "@type": type.googleapis.com/udpa.type.v1.TypedStruct
              type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              value:
                config:
                  name: llm
                  vm_config:
                    runtime: envoy.wasm.runtime.v8
                    code:
                      local:
                        filename: /etc/envoy/ai-proxy.wasm
                  configuration:
                    "@type": "type.googleapis.com/google.protobuf.StringValue"
                    value: | # 插件配置
                      {
                        "provider": {
                          "type": "zhipuai",                                
                          "apiTokens": [
                            "."
                          ]
                        }
                      }


          - name: envoy.filters.http.router
      
  clusters:
  - name: httpbin
    connect_timeout: 30s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: httpbin
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: httpbin
                port_value: 80
  # - name: redis_cluster
  #   connect_timeout: 30s
  #   type: STRICT_DNS
  #   lb_policy: ROUND_ROBIN
  #   load_assignment:
  #     cluster_name: redis
  #     endpoints:
  #       - lb_endpoints:
  #           - endpoint:
  #               address:
  #                 socket_address:
  #                   address: 172.17.0.1
  #                   port_value: 6379
  - name: outbound|6379||redis_cluster
    connect_timeout: 1s
    type: strict_dns
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: outbound|6379||redis_cluster
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 172.17.0.1
                    port_value: 6379
    typed_extension_protocol_options:
      envoy.filters.network.redis_proxy:
        "@type": type.googleapis.com/envoy.extensions.filters.network.redis_proxy.v3.RedisProtocolOptions
  # chroma
  - name: outbound|8001||chroma.dns
    connect_timeout: 30s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: outbound|8001||chroma.dns
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 172.17.0.1 # 本地 API 服务地址，这里是 docker0
                    port_value: 8001

  # es
  - name: outbound|9200||es.dns
    connect_timeout: 30s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: outbound|9200||es.dns
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 172.17.0.1 # 本地 API 服务地址，这里是 docker0
                    port_value: 9200
  # weaviate
  - name: outbound|8081||weaviate.dns
    connect_timeout: 30s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: outbound|8081||weaviate.dns
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 172.17.0.1 # 本地 API 服务地址，这里是 docker0
                    port_value: 8081
  # qdrant
  - name: outbound|6333||qdrant.dns
    connect_timeout: 30s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: outbound|6333||qdrant.dns
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 172.17.0.1 # 本地 API 服务地址，这里是 docker0
                    port_value: 6333
  # milvus
  - name: outbound|19530||milvus.dns
    connect_timeout: 30s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: outbound|19530||milvus.dns
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 172.17.0.1 # 本地 API 服务地址，这里是 docker0
                    port_value: 19530
  # llm
  - name: llm
    connect_timeout: 30s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: llm
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 172.17.0.1 # 本地 API 服务地址，这里是 docker0
                    port_value: 8000
  # dashvector
  - name: outbound|443||dashvector.dns
    connect_timeout: 30s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: outbound|443||dashvector.dns
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: vrs-cn-g6z3yq2wy0001z.dashvector.cn-hangzhou.aliyuncs.com
                    port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        "sni": "vrs-cn-g6z3yq2wy0001z.dashvector.cn-hangzhou.aliyuncs.com"
  # dashscope
  - name: outbound|443||dashscope.dns
    connect_timeout: 30s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: outbound|443||dashscope.dns
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: dashscope.aliyuncs.com
                    port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        "sni": "dashscope.aliyuncs.com"
  # bigmodel
  - name: outbound|443||bigmodel.dns
    connect_timeout: 30s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: outbound|443||bigmodel.dns
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: open.bigmodel.cn
                    port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        "sni": "open.bigmodel.cn"
  # pinecone
  - name: outbound|443||pinecone.dns
    connect_timeout: 30s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: outbound|443||pinecone.dns
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: higress-2bdfipe.svc.aped-4627-b74a.pinecone.io
                    port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        "sni": "higress-2bdfipe.svc.aped-4627-b74a.pinecone.io"
